[gd_scene load_steps=12 format=3 uid="uid://dosqanuerjola"]

[ext_resource type="Script" path="res://Actors/Fire Red/fire_set.gd" id="1_87vj2"]
[ext_resource type="Script" path="res://components/health_component.gd" id="2_bjwxt"]
[ext_resource type="Script" path="res://components/fire_component.gd" id="3_lg5l0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7cuu"]
size = Vector2(16, 25)

[sub_resource type="Gradient" id="Gradient_4v60e"]
offsets = PackedFloat32Array(0.0878906, 0.804688)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wilql"]
gradient = SubResource("Gradient_4v60e")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_f5m3x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0413038), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wxtpm"]
offsets = PackedFloat32Array(0.0972222, 0.803571, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.686275, 0, 0.290196, 1, 0.596078, 0.0235294, 0.345098, 0)

[sub_resource type="Gradient" id="Gradient_fnp53"]
offsets = PackedFloat32Array(0, 0.0694444, 0.34127, 0.605159, 0.886905)
colors = PackedColorArray(0.988235, 0.0784314, 0, 0, 0.989076, 0.144258, 0.0714286, 1, 0.988235, 0.47451, 0.184314, 1, 0.988235, 0.733333, 0.247059, 1, 0.988235, 1, 1, 0)

[sub_resource type="Curve" id="Curve_t6w4c"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q04oc"]
size = Vector2(19, 22)

[node name="FireSet" type="StaticBody2D" node_paths=PackedStringArray("health_component", "fire_component", "hitbox_collider")]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_87vj2")
health_component = NodePath("HealthComponent")
fire_component = NodePath("FireComponent")
hitbox_collider = NodePath("Hitbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_j7cuu")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -14)
color = Color(0.952941, 0.698039, 0.329412, 1)
texture = SubResource("GradientTexture2D_wilql")

[node name="Smoke" type="CPUParticles2D" parent="."]
position = Vector2(0, -18)
amount = 30
lifetime = 0.6
randomness = 0.15
direction = Vector2(2.08165e-12, -1)
spread = 48.0
gravity = Vector2(2.08165e-12, -80)
initial_velocity_max = 80.0
angular_velocity_min = -110.4
angular_velocity_max = 259.2
linear_accel_min = -49.34
linear_accel_max = 23.33
radial_accel_min = -32.66
scale_amount_min = 5.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_f5m3x")
color_ramp = SubResource("Gradient_wxtpm")

[node name="Fire" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 0.6
randomness = 0.15
direction = Vector2(2.08165e-12, -1)
spread = 21.0
gravity = Vector2(2.08165e-12, -80)
initial_velocity_max = 80.0
angular_velocity_min = -110.4
angular_velocity_max = 259.2
linear_accel_min = -49.34
linear_accel_max = 23.33
radial_accel_min = -32.66
scale_amount_min = 5.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_f5m3x")
color_ramp = SubResource("Gradient_fnp53")
hue_variation_min = -1.0
hue_variation_max = -1.0
hue_variation_curve = SubResource("Curve_t6w4c")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_q04oc")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_bjwxt")

[node name="FireComponent" type="Node" parent="." node_paths=PackedStringArray("smoke_effect", "fire_effect")]
script = ExtResource("3_lg5l0")
smoke_effect = NodePath("../Smoke")
fire_effect = NodePath("../Fire")
